--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
         }
     ],
     "minimum-stability": "dev",
+    "repositories": [
+	{
+	    "type": "vcs",
+	    "url": "https://github.com/johnbenz13/Imap"
+	}
+    ],
     "require": {
 	"php": ">=5.3.2",
 	"symfony/framework-bundle": "~2.1",
