--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
 	"php": ">=5.3.2",
 	"symfony/framework-bundle": "~2.1",
-	"jgg/imap": "composer-dev"
+	"jgg/imap": "dev-composer"
     },
     "autoload": {
 	"psr-0": { "JBZ\\ImapBundle": ""}
